--- a/MyStudy/vpsixteenanimation/build.gradle
+++ b/MyStudy/vpsixteenanimation/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
+
 
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+    compileSdkVersion 27
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.tianxi.vpsixteenanimation"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -25,17 +25,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-//    compile 'com.android.support:appcompat-v7:23.0.1-alpha1'
-//    compile 'com.android.support:support-v4:23.0.1-alpha1'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-//    compile 'com.google.android.gms:play-services:9.4.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+
+    implementation 'com.android.support:design:27.1.1'
+
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 }
