--- a/MyStudy/threelinkage/build.gradle
+++ b/MyStudy/threelinkage/build.gradle
@@ -24,15 +24,21 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    //    compile 'com.bigkoo:pickerview:2.0.8'
+    //https://github.com/Bigkoo/Android-PickerView 开源文档
+    
+
+
+    //    compile 'com.alibaba:fastjson:1.2.10'// 阿里巴巴的
+
 
     compile 'com.android.support:appcompat-v7:23.4.0'
-    testCompile 'junit:junit:4.12'
-//    compile 'com.bigkoo:pickerview:2.0.8'
     compile 'com.contrarywind:Android-PickerView:3.2.6'
-    //https://github.com/Bigkoo/Android-PickerView 开源文档
     compile 'com.google.code.gson:gson:2.7'
-
-//    compile 'com.alibaba:fastjson:1.2.10'// 阿里巴巴的
-
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    testCompile 'junit:junit:4.12'
 
 }
